--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  @apply bg-gray-100 dark:bg-gray-950 text-gray-950 dark:text-gray-100;
+  @apply bg-primary dark:bg-neutral text-neutral dark:text-primary;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
